Ensure there's gap in search input

--- a/src/globals.css
+++ b/src/globals.css
@@ -46,3 +46,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
+
+.welcome-search-field input[type='search'] {
+  padding-inline-start: 8px;
+}
